Layout issue on the conditions page

--- a/twisa-frontend/twisa-app/src/app/conditions/conditions.component.css
+++ b/twisa-frontend/twisa-app/src/app/conditions/conditions.component.css
@@ -1,8 +1,3 @@
-img {
-    width: 50px;
-    margin-right: 20px;
-}
-
 img:hover {
     cursor: pointer;
 }
@@ -12,5 +7,9 @@ img:hover {
 }
 
 .rowOffset {
-    margin-bottom: 20px;
+    margin-bottom: 15px;
+}
+
+.conditionsBox {
+    max-width: 500px;
 }
