--- a/twisa-frontend/twisa-app/src/app/results/results.component.css
+++ b/twisa-frontend/twisa-app/src/app/results/results.component.css
@@ -1,4 +1,4 @@
-img {
+.blockImage {
     width: 48px;
 }
 
@@ -15,19 +15,4 @@ img {
     border-radius: 5px;
     margin-top: 10px;
     padding: 10px;
-}
-
-.value-entry {
-    height: 30px;
-    line-height: 30px;
-}
-.value-entry img {
-    width: 30px;
-    
-}
-
-.label-entry {
-    font-weight: bold;
-    height: 30px;
-    line-height: 30px;
 }
